--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "json-server": "^0.15.1"
+    "json-server": "^0.15.1",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "PORT=8000 react-scripts start",
