--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "json-server": "^0.15.1",
-    "webpack-cli": "^4.10.0"
+    "json-server": "^0.15.1"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "start": "PORT=8000 react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "PORT=8000 react-scripts start",
+    "build": "react-scripts build",
     "server": "json-server --watch db.json -p 8002"
   },
   "eslintConfig": {
